# JsonQueryDB

./: .gitignore  CMakeLists.txt  README.md
data/: data.json
src/: json_parser.cpp  json_parser.hpp  main.cpp  query_parser.cpp  query_parser.hpp
